# DomainBench

./: README.md  plan.md  pyproject.toml  requirements.txt
domainbench/: __init__.py  cli.py
domainbench/capabilities/: __init__.py  base.py  chat_completion.py
domainbench/core/: __init__.py  config.py  engine.py  evaluator.py  reporter.py
domainbench/domains/: __init__.py  loader.py  schema.py
domainbench/domains/builtin/restaurant_waiter/: __init__.py  domain.yaml  generator.py
domainbench/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
examples/: benchmark_config.yaml
